<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/sudokuGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:columnCount="9"
            app:rowCount="9">

        </androidx.gridlayout.widget.GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:gravity="center"
                android:orientation="vertical">

                <RadioGroup
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    >

                    <RadioButton
                        android:id="@+id/easyRadioBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficultyEasy" />

                    <RadioButton
                        android:id="@+id/mediumRadioBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficultyMedium" />

                    <RadioButton
                        android:id="@+id/hardRadioBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/difficultyHard" />
                </RadioGroup>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button5"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="inGameExit"
                    android:text="@string/menu_back" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="38dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onSaveBoard"
                    android:text="@string/saveBoard" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>