<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/enterGame"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginTop="61dp"
        android:onClick="onEnterGame"
        android:text="@string/menu_enter_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/createBoard"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:onClick="onCreateBoard"
        android:text="@string/menu_create_board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterGame" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="62dp"
        android:layout_marginTop="98dp"
        android:text="Sudoku"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionsTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onInstructions"
        android:text="@string/menu_instructions"
        android:textColor="#2196F3"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBoard" />

    <Button
        android:id="@+id/norwegianBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="121dp"
        android:onClick="onLanguageSelection"
        android:text="Norwegian"
        app:layout_constraintEnd_toStartOf="@+id/englishBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextButton" />

    <Button
        android:id="@+id/englishBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="52dp"
        android:onClick="onLanguageSelection"
        android:text="English"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsTextButton" />

</androidx.constraintlayout.widget.ConstraintLayout>